--- a/webroot/callee/mapping/index.html
+++ b/webroot/callee/mapping/index.html
@@ -25,7 +25,7 @@ body {
 }
 div#container {
 	margin: 0 auto 0 auto;
-	padding: 1em;
+	padding: 0.4em;
 }
 
 h1 {
@@ -47,7 +47,7 @@ button, button:focus {
 	border-radius:3px;
 	color:white;
 	font-size: 1.0em;
-	padding: 0.7em 1em 0.7em 1em;
+	padding: 0.5em 0.4em 0.4em 0.4em;
 	min-width: 60px;
 	outline:none;
 	user-select:none;
@@ -72,8 +72,22 @@ a:hover {
     color:#fff;
     text-decoration:underline;
 }
+input:valid {
+	background-color: palegreen;
+}
+
+input:invalid {
+	background-color: lightpink;
+}
+.formtext {
+	border:none;
+	outline:none;
+	box-shadow:none; /* removes red border in FF */
+}
+
 </style>
 </head>
+
 <body>
 <div id="fullScreenOverlay" style="position:absolute; left:0; top:0; margin:0; padding:0; width:100%; height:100%; z-index:105; display:none;"></div>
 <div id="dynDialog" style="position:relative; user-select:none; display:none;"></div>
