mapping.js: alert() replaced by new func abortOnError() using full-window dataBoxContent

--- a/webroot/callee/mapping/index.html
+++ b/webroot/callee/mapping/index.html
@@ -102,6 +102,7 @@ input:invalid {
 const apiPath = "/rtcsig";
 var gentle = true;
 </script>
+<!-- client.js needed for hashcounter -->
 <script src="../client.js"></script>
 <script src="mapping.js"></script>
 
