settings.js: onload check calleeID from cookie vs urlArg (showing warning via databox)

--- a/webroot/callee/settings/index.html
+++ b/webroot/callee/settings/index.html
@@ -131,6 +131,7 @@ input[type=submit]:focus {
 <body>
 <div id="container">
 	<h1>WebCall Settings</h1>
+	<div id="databox" style="overflow-y:auto; padding:5px;"></div>
 
 	<form action="javascript:;" onsubmit="submitForm(true)" style="display:none; width:100%;" id="settings">
 		<label for="nickname" style="display:inline-block; padding-bottom:4px; color:#1b1; font-weight:600;">Nickname:</label><br>
