--- a/webroot/callee/index.html
+++ b/webroot/callee/index.html
@@ -380,11 +380,11 @@ input[type=submit]:focus {
 	<img id="exclamation"  onclick=""                   src="exclamation.svg" class="iconbutton" style="display:none;">
 
     <h1 id="title">WebCall</h1>
-    <div style="clear:all;_margin-top:8px;"></div>
+    <div style="clear:all;margin-top:8px;"></div>
 	<img id="checkboxes" onclick="openSlide()" src="checkboxes.svg" class="iconbutton"
-		 style="margin-top:18px;display:none;">
+		 style="margin-top:16px;display:none;">
 
-	<div id="buttons" style="display:grid; grid-template-columns: 1fr 1fr 28px; list-style-type:none; max-width:360px; margin-top:10px;">
+	<div id="buttons" style="display:grid; grid-template-columns: 1fr 1fr 28px; list-style-type:none; max-width:360px; margin-top:14px;">
         <button id="onlineButton" disabled>Go Online</button>
         <button id="offlineButton" disabled>Go Offline</button>
         <button id="answerButton" style="display:none" disabled>Answer</button>
