callee: goOnlineButton -> goOnlineSwitch; removed all goOfflineButton

--- a/webroot/callee/index.html
+++ b/webroot/callee/index.html
@@ -458,7 +458,7 @@ input:checked + .slider {
 
 	<div class="buttonRow">
 		<label class="switch" style="margin-top:8px;">
-			<input type="checkbox" id="onlineButton">
+			<input type="checkbox" id="onlineSwitch">
 			<span class="slider"></span>
 		</label>
 
