--- a/webroot/callee/index.html
+++ b/webroot/callee/index.html
@@ -297,7 +297,13 @@ input[type=submit]:focus {
 	opacity:1; 
 }
 
-@media only screen and (max-width: 430px) {
+@media only screen and (max-width: 450px) {
+	.iconbutton {
+		position:relative; float:right; width:28px; margin-left:12px; margin-right:12px; margin-top:7px;
+	}
+}
+
+@media only screen and (max-width: 390px) {
 	.iconbutton {
 		position:relative; float:right; width:25px; margin-left:10px; margin-right:10px; margin-top:8px;
 	}
