--- a/webroot/callee/index.html
+++ b/webroot/callee/index.html
@@ -85,18 +85,19 @@ button[disabled] {
 
 div#container {
 	padding: 0.7em;
-	padding-right: 0.5em;
+	padding-right: 0.4em;
+	padding-left: 2.5%;
 	max-width:600px;
 	overflow:hidden;
 }
 h1 {
-	font-size:1.2em;
+	font-size:1.1em;
 	font-weight:600;
 	user-select:none;
 	margin-block-start:0;
 	margin-block-end:0;
-	margin-top:6px;
-	margin-bottom:6px;
+	margin-top:20px;
+	margin-bottom:10px;
 	line-height:1.3em;
 }
 a, a:link, a:visited, a:active {
@@ -134,14 +135,14 @@ label {
 }
 
 .status {
-	margin-top:8px;
-	margin-bottom:8px;
-	padding-left:2px;
+	_margin-top:8px;
+	_margin-bottom:8px;
+	_padding-left:2px;
 	width:98%;
 	max-width:570px;
 	line-height:1.3em;
-	transition:opacity 600ms;
-    color:#fff;
+	transition:opacity 400ms ease-out;
+    color:#ccc;
 }
 .callListTitle {
 	font-size:0.9em;
@@ -152,7 +153,7 @@ label {
 	margin-bottom:18px;
 	font-size:1.0em;
 	line-height:1.2em;
-	transition:opacity 600ms;
+	transition:opacity 400ms;
     color:#ddd;
 }
 .msgbox {
@@ -288,7 +289,7 @@ input[type=submit]:focus {
 	-webkit-transform: scale(-1, 1);
 }
 .iconbutton {
-	position:relative; float:right; width:32px; margin-left:16px; margin-right:16px; margin-top:5px;
+	position:relative; float:right; width:30px; margin-left:17px; margin-right:17px; margin-top:6px;
 	z-index:100; user-select:none; cursor:pointer; 
 	transition:all 300ms ease-out;
 	opacity:0.8; 
@@ -297,7 +298,7 @@ input[type=submit]:focus {
 	opacity:1; 
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 460px) {
 	.iconbutton {
 		position:relative; float:right; width:28px; margin-left:12px; margin-right:12px; margin-top:7px;
 	}
@@ -465,7 +466,7 @@ input:checked + .slider {
 <div id="dynDialog" style="position:relative; user-select:none; display:none;"></div>
 
 <div id="container">
-    <div style="height:8px; _background:#666;"></div>
+    <!--div style="height:8px; background:#666;"></div-->
 	<div class="buttonRow">
 		<label class="switch" style="margin-top:8px;">
 			<input type="checkbox" id="onlineSwitch">
@@ -481,7 +482,7 @@ input:checked + .slider {
 		<img id="exclamation"  onclick=""                   src="exclamation.svg" class="iconbutton" style="display:none;">
 		</div>
 	</div>
-    <div style="clear:all;height:18px; _background:#666;"></div>
+    <div style="clear:all;height:2px; _background:#666;"></div>
 
 
 	<h1><span>WebCall</span> <span id="title"></span></h1>
@@ -522,7 +523,16 @@ input:checked + .slider {
 			<label class="menulabel2" id="fullscreenlabel">
 				<input type="checkbox" id="fullscreen" class="checkbox"> Full screen</label>
 		</div>
-		<!-- div id="ownlink" style="opacity:0.9;margin-top:4px;"></div -->
+	</div>
+
+	<div id="progressSend" style="width:100%;max-width:360px;margin-top:10px;display:none;">
+		<div id="progressSendLabel">sending:</div>
+		<progress id="fileProgressSend" max="0" value="0" style="width:100%" onclick="stopProgressSend()"></progress>
+	</div>
+	<div id="download" style="margin-top:10px; margin-bottom:10px;"></div>
+	<div id="progressRcv" style="width:100%;max-width:360px;display:none;">
+		<div id="progressRcvLabel">receiving:</div>
+		<progress id="fileProgressRcv" max="0" value="0" style="width:100%" onclick="stopProgressRcv()"></progress>
 	</div>
 
 	<textarea id="msgbox" class="msgbox" spellcheck="false" style="display:none"></textarea>
@@ -534,16 +544,8 @@ input:checked + .slider {
 		</form>
 	</div>
 
-	<div id="ownlink" style="opacity:0.9;margin-top:4px;"></div>
-	<div id="progressSend" style="width:100%;max-width:360px;margin-top:10px;display:none;">
-		<div id="progressSendLabel">sending:</div>
-		<progress id="fileProgressSend" max="0" value="0" style="width:100%" onclick="stopProgressSend()"></progress>
-	</div>
-	<div id="download" style="margin-top:10px; margin-bottom:10px;"></div>
-	<div id="progressRcv" style="width:100%;max-width:360px;display:none;">
-		<div id="progressRcvLabel">receiving:</div>
-		<progress id="fileProgressRcv" max="0" value="0" style="width:100%" onclick="stopProgressRcv()"></progress>
-	</div>
+	<div id="ownlink" style="opacity:0.9;_margin-top:2px;"></div>
+
 	<div id="waitingCallersTitle" class="callListTitle" style="color:#f46; display:none;">Waiting calls:</div>
 	<div id="waitingCallers" class="callList"></div>
 
