--- a/webroot/user/index.html
+++ b/webroot/user/index.html
@@ -319,13 +319,16 @@ input[type=submit]:focus {
 <div id="menuDialog" style="position:relative; max-width:600px; user-select:none; display:none;">
 	<div style="position:absolute; right:0px; top:0; z-index:110; background:#45dd; color:#fff; padding:10px 0px; line-height:2.6em; border-radius:3px; cursor:pointer;">
 		<div class="menuButton" id="callstats" onclick="openPostCallStats()">Call Stats</div>
+
 		<label class="menulabel" id="fileselectlabel" style="display:none; padding-left:20px;">
 			Send File
 			<input id="fileselect" type="file" style="display:none"></input>
 		</label>
 
-		<input type="checkbox" id="fullscreen" class="checkbox" value="123"/>
-		<label class="menulabel" id="fullscreenlabel" for="fullscreen">Full screen</label>
+		<div id="fullscreenDiv">
+			<input type="checkbox" id="fullscreen" class="checkbox" value="123"/>
+			<label class="menulabel" id="fullscreenlabel" for="fullscreen">Full screen</label>
+		</div>
 	</div>
 </div>
 
