callee css: added css switch attribution

--- a/webroot/callee/index.html
+++ b/webroot/callee/index.html
@@ -147,6 +147,7 @@ label {
 .callListTitle {
 	font-size:0.9em;
 	color:#ff2;
+	font-weight:500;
 }
 .callList {
 	margin-top:4px;
@@ -317,6 +318,7 @@ input[type=submit]:focus {
 }
 
 
+/* css switch by Marcus Burnette https://codepen.io/mburnette/ */
 .switch input {
   display: none;
 }
