--- a/webroot/callee/index.html
+++ b/webroot/callee/index.html
@@ -28,9 +28,9 @@ button, button:focus {
 	border-radius:3px;
 	color:white;
 	font-size: 1.0em;
-	margin: 0.8em 0.8em 0.8em 0;
+	margin: 0.3em 0.8em 0.4em 0;
 	padding: 0.7em 0.5em 0.6em 0.5em;
-	min-width: 140px;
+	min-width: 110px;
 	outline:none;
 	user-select:none;
 }
@@ -44,6 +44,7 @@ button:active {
 button[disabled] {
 	color:#aaa;
 }
+
 @media (hover: hover) {
 	button:hover {
 		background-color: #b82a68;
@@ -96,7 +97,7 @@ h1 {
 	user-select:none;
 	margin-block-start:0;
 	margin-block-end:0;
-	margin-top:20px;
+	margin-top:16px;
 	margin-bottom:10px;
 	line-height:1.3em;
 }
@@ -325,10 +326,9 @@ input[type=submit]:focus {
 
 .switch {
   display: inline-block;
-  width: 60px; /*=w*/
-  height: 30px; /*=h*/
+  width: 60px;
+  height: 30px;
   margin: 4px;
-  _transform: translateY(50%);
   position: relative;
 }
 
@@ -359,20 +359,18 @@ input[type=submit]:focus {
 
 input:checked + .slider:before {
   transform: translateX(30px); /*translateX(w-h)*/
-  _background-color: limeGreen;
   background-color: #7af;
 }
 
 input:checked + .slider {
-  _box-shadow: 0 0 0 2px limeGreen, 0 0 8px limeGreen;
   box-shadow: 0 0 0 2px #ddd, 0 0 8px #ddd;
 }
-
+/*
 input:disabled + .slider {
-  _color: #f00;
   background-color: #700;
   box-shadow: 0 0 0 2px #333, 0 0 8px #333;
 }
+*/
 
 .buttonRow {
 	display:grid;
@@ -478,13 +476,14 @@ input:disabled + .slider {
 
 	<h1><span>WebCall</span> <span id="title"></span></h1>
 
-	<div id="status" class="status"></div>
-
-	<div id="answerButtons" style="_max-width:360px; display:none;">
+	<!-- turn not with "display:grid" -->
+	<div id="answerButtons" style="display:none; grid-template-columns: 5fr 5fr 1fr; max-width:400px; margin-right:30px;">
 		<button id="answerButton">Answer</button>
 		<button id="rejectButton">Hang Up</button>
-		<img id="onlineIndicator" src="" style="width:28px; margin:0.6em 0.2em 0.6em 0; user-select:none;">
+		<img id="onlineIndicator" src="green-gradient.svg" style="width:30px; margin-top:12px; user-select:none;">
 	</div>
+
+	<div id="status" class="status" style="margin-top:10px;"></div>
 
 	<form action="javascript:;" onsubmit="submitFormDone(1)" style="max-width:420px;display:none;" id="password">
 		<input type="text" autocomplete="username" id="username" style="display:none;" required>
