callee.js onLoad(): to prevent an error when we try to play the ringtone in pure browser mode, we must make the user interact with the app (click the switch to go online) this is why we clear auto; CSS .status font-weight:600

--- a/webroot/callee/index.html
+++ b/webroot/callee/index.html
@@ -164,6 +164,7 @@ label {
 	max-width:570px;
 	transition:opacity 400ms ease-in-out;
     color:#ccc;
+    font-weight:600;
 }
 .callListTitle {
 	padding-top:14px;
