--- a/webroot/callee/index.html
+++ b/webroot/callee/index.html
@@ -181,15 +181,15 @@ label {
     color:#ddd;
 }
 .msgbox {
-	padding-top:10px;
-	padding-bottom:10px;
-	font-size:1.2em;
-	width:95%;
+	padding-top:2px;
+	padding-bottom:2px;
+	font-size:1.0em;
+	width:97%;
 	max-width:550px;
-	height:4em;
+	height:85px;
 	background-image: linear-gradient(#12b,#25f);
 	border:none;
-	border-radius:3px;
+	border-radius:5px;
 	color:#fff;
 	outline:none;
 	overflow-y:auto;
@@ -229,26 +229,25 @@ select:focus {
 }
 
 form {
-	margin-top:18px;
-	font-size:1.2em;
+	_margin-top:18px;
+	_font-size:1.2em;
 }
 .formtext {
 	padding-top:2px;
-	padding-bottom:12px;
+	padding-bottom:2px;
 	border-radius:4px;
 	border:none;
 	width:86%;
 	max-width:360px;
-	font-size:1.2em;
+	font-size:1.1em;
 	color:#000;
-	_padding:4px 4px;
 	box-sizing:border-box;
 	outline:none;
-	background:#0de;
+	background:#0bc;
 	box-shadow:none; /* removes red border in FF */
 }
 .formtext:focus {
-	background-color: #0fc;
+	background-color: #0dc;
 	color:#000;
 }
 input[type=submit] {
@@ -554,13 +553,14 @@ input:disabled + .slider {
 		<progress id="fileProgressRcv" max="0" value="0" style="width:100%" onclick="stopProgressRcv()"></progress>
 	</div>
 
-	<textarea id="msgbox" class="msgbox" spellcheck="false" style="display:none"></textarea>
-
-	<div id="textbox" style="display:none;">
-		<form action="javascript:;" onsubmit="submitFormDone(2)" style="margin-top:4px;">
-			<input name="enterText" id="enterText" type="text" class="formtext" style="width:98%; max-width:550px; font-size:1.1em;">
-			<input type="submit" name="Submit" id="submitText" value="" style="display:none">
-		</form>
+	<div id="msgboxdiv" style="padding-top:10px;padding-bottom:10px;display:none;">
+		<textarea id="msgbox" class="msgbox" spellcheck="false""></textarea>
+		<div id="textbox" style="display:none;">
+			<form action="javascript:;" onsubmit="submitFormDone(2)">
+				<input name="enterText" id="enterText" type="text" class="formtext" style="width:97%; max-width:550px;">
+				<input type="submit" name="Submit" id="submitText" value="" style="display:none">
+			</form>
+		</div>
 	</div>
 
 	<div id="waitingCallersTitle" class="callListTitle" style="color:#f46; display:none;">Waiting calls:</div>
