--- a/webroot/callee/index.html
+++ b/webroot/callee/index.html
@@ -25,17 +25,17 @@ body {
 /* Answer, Hang Up, TextChat, Send File */
 .answerButtons {
 	padding-top:10px;
-	padding-bottom:10px;
+	padding-bottom:5px;
 	display:none; /* grid */
 	grid-template-columns: 5fr 5fr 44px;
-	max-width:340px;
-	padding-right:20px;
+	max-width:420px;
+	_padding-right:20px;
 }
-@media only screen and (min-width: 540px) {
+@media only screen and (min-width: 560px) {
 	.answerButtons {
 		display:none; /* grid */
 		grid-template-columns: 5fr 5fr 44px 5fr 5fr;
-		max-width:736px;
+		max-width:600px;
 		padding-right:0px;
 	}
 }
@@ -47,13 +47,17 @@ body {
 	border-radius:5px;
 	color:#eee;
 	font-size: 1.0em;
-	margin: 0.3em 0.8em 0.4em 0;
-	padding: 0.3em 0.1em 0.3em 0.1em;
+	font-weight: 400;
+	font-family:sans-serif;
+	margin: 0.5em 0.8em 0.9em 0;
+	padding: 0.3em 0.1em 0.4em 0.1em;
 	min-width: 100px;
+	max-width: 160px;
 	outline:none;
 	text-align:center;
 	user-select:none;
 	cursor:pointer;
+	box-sizing:border-box;
 }
 /*
 .mainbutton:focus {
@@ -501,7 +505,7 @@ input:disabled + .slider {
 		<button id="answerButton" class="mainbutton">Answer</button>
 		<button id="rejectButton" class="mainbutton">Hang Up</button>
 		                     <!-- src="red-gradient.svg" for testing -->
-		<img id="onlineIndicator" src="" style="width:30px; margin-top:9px; user-select:none;">
+		<img id="onlineIndicator" src="" style="width:34px; margin-left:-1px; margin-top:12px; user-select:none;">
 
 		<button id="chatButton" class="mainbutton">TextChat</button>
 		<label id="fileselectlabel" class="mainbutton" for="fileselect">
