callee css: container now wider (600 -> 740px) and horizontally centered; callee.js peerConnected3()

--- a/webroot/callee/index.html
+++ b/webroot/callee/index.html
@@ -20,6 +20,7 @@ body {
 	font-family:Sans-Serif;
 	font-weight:300;
 	margin:0;
+	scrollbar-width:none;
 }
 
 /* Answer, Hang Up, TextChat, Send File */
@@ -120,18 +121,20 @@ body {
 
 div#containerOuter {
 	width:100%;
-	_display:flex;
-	_justify-content:center;
+	display:flex;
+	justify-content:center;
+	scrollbar-width:none;
 }
 
 div#container {
 	padding-top:5px;
 	padding-bottom:5px;
-	padding-right: 0.4em;
-	padding-left: 2%;
+	_padding-right: 0.4em;
+	_padding-left: 2%;
 	width:99%;
 	max-width:740px;
 	overflow:hidden;
+	scrollbar-width:none;
 }
 
 a, a:link, a:visited, a:active {
