--- a/webroot/callee/index.html
+++ b/webroot/callee/index.html
@@ -122,15 +122,15 @@ body {
 div#containerOuter {
 	width:100%;
 	display:flex;
-	justify-content:center;
+	_justify-content:center;
 	scrollbar-width:none;
 }
 
 div#container {
 	padding-top:5px;
 	padding-bottom:5px;
-	_padding-right: 0.4em;
-	_padding-left: 2%;
+	padding-left: 2%;
+	padding-right: 0.4em;
 	width:99%;
 	max-width:740px;
 	overflow:hidden;
