callee.js: all endWebRtcSession() now called with: mustGoOnlineAfter = goOnlineSwitch.checked; signalingCommand('cmd==cancel') fixed: TODO this code is not sufficient

--- a/webroot/callee/index.html
+++ b/webroot/callee/index.html
@@ -121,7 +121,7 @@ body {
 
 div#containerOuter {
 	width:100%;
-	display:flex;
+	_display:flex;
 	_justify-content:center;
 	scrollbar-width:none;
 }
