callee.js showWaitingCallers(): do not show @@domain of caller if it is same as callees server domain; 4th col now 'text-align:right' to make tablet right aligned

--- a/webroot/callee/index.html
+++ b/webroot/callee/index.html
@@ -188,7 +188,7 @@ label {
 }
 .callList {
 	padding-bottom:12px;
-	padding-right:4px;
+	padding-right:2px;
 	font-size:1.0em;
 	line-height:1.2em;
 	transition:opacity 400ms;
@@ -580,7 +580,7 @@ input:disabled + .slider {
 		</div>
 	</div>
 
-	<div id="waitingCallersTitle" class="callListTitle" style="color:#f46; display:none;">Waiting calls:</div>
+	<div id="waitingCallersTitle" class="callListTitle" style="color:#f46; display:none;">Waiting callers:</div>
 	<div id="waitingCallers" class="callList" style="display:none;"></div>
 
 	<div id="ownlink" style="opacity:0.9; padding-top:10px; padding-bottom:10px; display:none;"></div>
